Final bug fixes

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All Customers</h1>
 
   <div class="navigation-links">
-    <%= link_to "View Alphabetized", customers_alphabetized, class: "button" %>
+    <%= link_to "View Alphabetized", customers_alphabetized_path, class: "button" %>
     <%= link_to "View Customers Missing Email", customers_missing_email_path, class: "button" %>
   </div>
 
